// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountDetails /> renders with lockup account 1`] = `
<div
  className="jsx-1455372711 account-info-container"
>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Transactions
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                className="jsx-1455372711"
              >
                ↑
                7
              </span>
                
              <span
                className="jsx-1455372711"
              >
                ↓
                10
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-storage.svg"
              />
              Storage Used
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              876 B
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Lockup Account
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="/accounts/gjturigjgkjnfidsjffjsa.lockup.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                gjtur…jsa.lockup.near
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell block-card-created-text account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Wallet Balances
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="http://wallet/profile/megan.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
                target="_blank"
              >
                megan.near
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="card-cell block-card-created account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Created
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              February 01, 2019 at 12:00:00am
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountDetails /> renders without lockup account 1`] = `
<div
  className="jsx-1455372711 account-info-container"
>
  <div
    className="row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-m-transaction.svg"
              />
              Transactions
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <span
                className="jsx-1455372711"
              >
                ↑
                7
              </span>
                
              <span
                className="jsx-1455372711"
              >
                ↓
                10
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-4"
    >
      <div
        className="card-cell  card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              <img
                className="jsx-1276427197 card-cell-title-img"
                src="/static/images/icon-storage.svg"
              />
              Storage Used
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              1876 B
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="border-0 row no-gutters"
  >
    <div
      className="col-md-4"
    >
      <div
        className="card-cell block-card-created-text account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Wallet Balances
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              <a
                className="jsx-3150401870 account-link"
                href="http://wallet/profile/near.near"
                onClick={[Function]}
                onMouseEnter={[Function]}
                target="_blank"
              >
                near.near
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-md-8"
    >
      <div
        className="card-cell block-card-created account-card-back border-0 card"
      >
        <div
          className="card-body"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="card-cell-title align-self-center col-md-12 col-auto"
            >
              Created
              <div
                className="jsx-782042476 term-helper"
              >
                <img
                  className="jsx-782042476 info"
                  onClick={[Function]}
                  src="/static/images/icon-info.svg"
                />
              </div>
            </div>
            <div
              className="ml-auto card-cell-text align-self-center col-md-12 col-auto"
            >
              February 01, 2019 at 12:00:00am
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
